Avalara Fullqa/src/LeanData/objects/One_Time_Buyer_Persona_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Range__c</fullName>
        <label>DateRange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona_ID_List__c</fullName>
        <label>PersonaIDList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Persona_Name_List__c</fullName>
        <label>personaNameList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <label>Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Buyer_Persona_Num__c</fullName>
        <label>SelectedBuyerPersonaNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OneTimeBuyerPersonaHistory</label>
    <nameField>
        <label>OneTimeBuyerpPersonaHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneTImeBuyerPersonaHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>